Structure chane / simple content display / FE draft

--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -27,7 +27,8 @@
 
 
 <script src="app/AJAX.es6"></script>
-<script src="app/PagesServices.es6"></script>
+<script src="app/content/ContentServices.es6"></script>
+<script src="app/page/PagesServices.es6"></script>
 <script src="app/ModalWindow.es6"></script>
 <script src="app/app.es6"></script>
 </body>
