API changes / Jasmine init

--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -29,7 +29,9 @@
 </div>
 
 
+<script src="app/helpers/DOM.es6"></script>
 <script src="app/helpers/AJAX.es6"></script>
+
 <script src="app/content/ContentServices.es6"></script>
 
 <script src="app/page/PagesServices.es6"></script>
