Router draft / tree algortighm draft

--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -30,6 +30,7 @@
 
 
 <script src="app/helpers/DOM.es6"></script>
+<script src="app/helpers/Router.es6"></script>
 <script src="app/helpers/AJAX.es6"></script>
 
 <script src="app/content/ContentServices.es6"></script>
