Form / Helpers - init / Drawing tree from flat structure / ModalWindow - changed logic / Preloader - init

--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -16,17 +16,7 @@
 
 </div>
 
-<div id="modalWindow" class="modalWindow">
-    <div class="modalInner">
-        <div id="modalWindowContent">
 
-        </div>
-        <div class="modalChoice">
-            <button id="modalWindow__yes">Yes</button>
-            <button id="modalWindow__no">No</button>
-        </div>
-    </div>
-</div>
 
 
 <script src="app/helpers/DOM.es6"></script>
@@ -35,10 +25,13 @@
 
 <script src="app/content/ContentServices.es6"></script>
 
-<script src="app/page/PagesServices.es6"></script>
+<script src="app/page/PageServices.es6"></script>
+<script src="app/page/PageFormComponent.es6"></script>
 <script src="app/page/PageListComponent.es6"></script>
 
 <script src="app/helpers/ModalWindow.es6"></script>
+<script src="app/helpers/Preloader.es6"></script>
+<script src="app/helpers/Helpers.es6"></script>
 <script src="app/app.es6"></script>
 </body>
 </html>
