Page slug / SEO tags

--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -24,6 +24,7 @@
 <script src="app/helpers/AJAX.es6"></script>
 
 <script src="app/content/ContentServices.es6"></script>
+<script src="app/content/ContentFormComponent.es6"></script>
 
 <script src="app/page/PageServices.es6"></script>
 <script src="app/page/PageFormComponent.es6"></script>
@@ -33,5 +34,8 @@
 <script src="app/helpers/Preloader.es6"></script>
 <script src="app/helpers/Helpers.es6"></script>
 <script src="app/app.es6"></script>
+
+
+
 </body>
 </html>
