--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -23,6 +23,10 @@
 <script src="app/helpers/Router.es6"></script>
 <script src="app/helpers/AJAX.es6"></script>
 
+<script src="app/common/Component.es6"></script>
+
+<script src="app/adminpanel/AdminPanelComponent.es6"></script>
+
 <script src="app/content/ContentServices.es6"></script>
 <script src="app/content/ContentFormComponent.es6"></script>
 
