Preparation for babel.js / User+UserGroup model

--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -19,27 +19,29 @@
 
 
 
-<script src="app/helpers/DOM.es6"></script>
-<script src="app/helpers/Router.es6"></script>
-<script src="app/helpers/AJAX.es6"></script>
+<script src="src/helpers/DOM.es6"></script>
+<script src="src/helpers/Router.es6"></script>
+<script src="src/helpers/AJAX.es6"></script>
 
-<script src="app/common/Component.es6"></script>
+<script src="src/common/Component.es6"></script>
 
-<script src="app/adminpanel/AdminPanelComponent.es6"></script>
+<script src="src/adminpanel/AdminPanelComponent.es6"></script>
 
-<script src="app/content/ContentServices.es6"></script>
-<script src="app/content/ContentFormComponent.es6"></script>
+<script src="src/content/ContentServices.es6"></script>
+<script src="src/content/ContentFormComponent.es6"></script>
 
-<script src="app/page/PageServices.es6"></script>
-<script src="app/page/PageFormComponent.es6"></script>
-<script src="app/page/PageListComponent.es6"></script>
+<script src="src/page/PageServices.es6"></script>
+<script src="src/page/PageFormComponent.es6"></script>
+<script src="src/page/PageListComponent.es6"></script>
 
-<script src="app/helpers/ModalWindow.es6"></script>
-<script src="app/helpers/Preloader.es6"></script>
-<script src="app/helpers/Helpers.es6"></script>
-<script src="app/app.es6"></script>
+<script src="src/helpers/ModalWindow.es6"></script>
+<script src="src/helpers/Preloader.es6"></script>
+<script src="src/helpers/Helpers.es6"></script>
+<script src="src/app.es6"></script>
 
 
+
+<!--<script data-main="app/app.js" src="../node_modules/requirejs/require.js"></script>-->
 
 </body>
 </html>
