--- a/public/nitron/index.html
+++ b/public/nitron/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/css/font-awesome.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>NitronCMS - Node.js CMS</title>
 </head>
 <body>
 <div class="wrapper">
