--- a/public/test/index.html
+++ b/public/test/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
 
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+    <script type="text/javascript" src="../node_modules/jasmine-ajax/lib/mock-a jax.js"></script>
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
     <title>Unit tests</title>
