--- a/public/test/index.html
+++ b/public/test/index.html
@@ -9,23 +9,24 @@
     <link rel="stylesheet" type="text/css" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
 
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-    <script type="text/javascript" src="../node_modules/jasmine-ajax/lib/mock-a jax.js"></script>
+
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
+    <script type="text/javascript" src="../node_modules/jasmine-ajax/lib/mock-ajax.js"></script>
     <title>Unit tests</title>
 </head>
 <body>
 
 
-<script src="../nitron/app/helpers/DOM.es6"></script>
-<script src="../nitron/app/helpers/AJAX.es6"></script>
+<script src="../nitron/src/helpers/DOM.es6"></script>
+<script src="../nitron/src/helpers/AJAX.es6"></script>
 
-<script src="../nitron/app/content/ContentServices.es6"></script>
+<script src="../nitron/src/content/ContentServices.es6"></script>
 
-<script src="../nitron/app/page/PagesServices.es6"></script>
-<script src="../nitron/app/page/PageListComponent.es6"></script>
+<script src="../nitron/src/page/PagesServices.es6"></script>
+<script src="../nitron/src/page/PageListComponent.es6"></script>
 
-<script src="../nitron/app/helpers/ModalWindow.es6"></script>
+<script src="../nitron/src/helpers/ModalWindow.es6"></script>
 
 
 <script src="DOM.spec.js"></script>
