--- a/public/nitron-a2/index.html
+++ b/public/nitron-a2/index.html
@@ -2,8 +2,14 @@
 <head>
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src *">-->
+    <base href="/">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="./css/fonts/font-awesome.css">
+    <link rel="stylesheet" href="./css/foundation.css">
+    <link rel="stylesheet" href="./css/app.css">
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
